book slug endpoint
