# repositories/book_repository.rs
@@ -4,6 +4,7 @@ use domain::entities::book::Book;
 use domain::enums::language::Language;
 use domain::items_total::ItemsTotal;
 use domain::pagination::Pagination;
+use domain::slug::Slug;
 use std::error::Error;
 
 pub mod book_character_repository;
@@ -27,4 +28,5 @@ pub trait BookRepository: Send + Sync {
   async fn filter_existing(&self, book_ids: &[u32]) -> Result<Vec<u32>, Box<dyn Error>>;
 
   async fn get_statistics(&self, book_ids: &[u32]) -> Result<Vec<BookStatistic>, Box<dyn Error>>;
+  async fn get_by_slug(&self, slug: &Slug, language: Language) -> Result<Option<Book>, Box<dyn Error>>;
 }
